chore: judge added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -715,6 +715,23 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
+              <div class="profile">
+                <div class="content">
+                  <h1 class="title">Kuldeep Singh</h1>
+                  <div class="content-body">
+                    <p>Head of ARVR practice at ThoughtWorks, India</p>
+                    <p>Co-Lead of Product Design and development</p>
+                    <p>CoP at VRIAR Association</p>
+                  </div>
+                </div>
+                <div class="image-section">
+                  <img class="profile_image" src="img/judge_4.jpeg" alt="profile-pic">
+                </div>
+              </div>
+            </div>
+          </div>
           {{!-- <div class="row">
             <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
               <div class="profile">
