Add Alumni page and modify prizes section

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -89,6 +89,7 @@
               <li><a href="#sponsorChallenges">Challenges</a></li>
               <li><a href="#faq">FAQs</a></li>
               <li><a href="#contact">Contact</a></li>
+              <li><a href="/alumni">Alumni</a></li>
             </ul>
           </nav>
           <!-- /Navigation -->
@@ -599,7 +600,6 @@
         </div>
         <!-- /container -->
       </div> --}}
-
       <!-- PRIZES -->
       <div id="prizes" class="section">
         <div class="container">
@@ -617,10 +617,11 @@
               </div>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
-              <div class="front content" style="background: linear-gradient(to top left, #F7736F, #F5372A)">
-                <h2>1st Prize</h2>
-                {{!-- <h1>&#x20B9; 10,000</h1> --}}
-                <h4>Worth 1.5 Lakhs+</h4>
+              <div class="front content" style="background: linear-gradient(to top left, #dbd271, #c09540)">
+                <a class="sponsor">
+                  <img src="./img/prize_1.png" alt="">
+                </a>
+                <h3 style="color: white; text-decoration: none;">Worth 1.5 Lakhs+</h4>
               </div>
               <div class="back">
                 <h2 class="content text-center">Details</h2>
@@ -630,9 +631,11 @@
               </div>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
-              <div class="front content small" style="background: linear-gradient(to top left, #48c6ef, #6f86d6);">
-                <h2>2nd Prize</h2>
-                <h4>Worth 1.25 Lakhs+</h4>
+              <div class="front content " style="background: linear-gradient(to top left, #62eea1, #29945f);">
+                <a class="sponsor">
+                  <img src="./img/prize_2.png" alt="">
+                </a>
+                <h3 style="color: white; text-decoration: none;">Worth 1.25 Lakhs+</h4>
               </div>
               <div class="back">
                 <h2 class="content text-center">Details</h2>
@@ -642,9 +645,11 @@
               </div>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
-              <div class="front content small" style="background: linear-gradient(to top left, #1AF589, #15C26C)">
-                <h2>3rd Prize</h2>
-                <h4>Worth 1 Lakhs+</h4>
+              <div class="front content " style="background: linear-gradient(to top left, #dd778d, #9c192a)">
+                <a class="sponsor">
+                  <img src="./img/prize_3.png" alt="">
+                </a>
+                <h3 style="color: white; text-decoration: none;">Worth 1 Lakhs+</h4>
               </div>
               <div class="back">
                 <h2 class="content text-center">Details</h2>
