--- a/views/alumni.hbs
+++ b/views/alumni.hbs
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800i|Amaranth:700i|Kanit:700i|Lato:900i|Lato|Source+Sans+Pro:900i"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="./css/herostyles.css">
@@ -30,40 +31,167 @@
             </div>
         </div>
     </header>
-    <div class="alumni-section">
-        <div class="alumni-greet">
+    <div class="alumni-greet">
+        <div class="greet-heading">
             <h1>A Big thanks to our Alumni</h1>
         </div>
+        <div class="alumni-greet-msg container">
+            <p>We would like to thank our alumni for their humongous contribution towards this event. Right from guiding
+                us on how to conduct Dotslash online for the first time, to agreeing to be the mentors and sponsors on
+                board for this Hackathon, they have taken out the time for us and given us immense support and
+                encouragement. We appreciate all your help and efforts, Dotslash 4.0 couldn't have been possible without
+                you!</p>
+        </div>
     </div>
-    </header>
-    <div class="alumni-section">
+    <div class="container alumni-display">
         <div class="item">
             <div class="card-img">
-                <img src="https://picsum.photos/400/400" alt="" />
+                <img src="img/alumni_1.jpg" alt="" />
+            </div>
+            <div class="alumni-contact">
+                <a href="https://www.linkedin.com/in/rogin-koshy-aa5493144/" rel="noopener noreferrer" target="_blank">
+                    <i class="fa fa-linkedin"></i>
+                </a>
             </div>
             <div class="card-body">
                 <div class="card-body-name">
-                    John Doe
+                    Rogin Koshy
                 </div>
                 <div class="card-body-position">
-                    Software Engineer at Google
+                    Batch of 2016-2020
+                </div>
+
+            </div>
+        </div>
+        <div class="item">
+            <div class="card-img">
+                <img src="img/alumni_2.jpg" alt="" />
+            </div>
+            <div class="alumni-contact">
+                <a href="https://www.linkedin.com/in/vedansh-agarwal-545166149/" rel="noopener noreferrer"
+                    target="_blank">
+                    <i class="fa fa-linkedin"></i>
+                </a>
+            </div>
+            <div class="card-body">
+                <div class="card-body-name">Vedansh Agarwal</div>
+                <div class="card-body-position">
+                    Batch of 2016-2020
                 </div>
             </div>
         </div>
         <div class="item">
             <div class="card-img">
-                <img src="https://picsum.photos/400/400" alt="" />
+                <img src="img/alumni_3.jpg" alt="" />
+            </div>
+            <div class="alumni-contact">
+                <a href="https://www.linkedin.com/in/abhijeet-mathur-58b812153/" rel="noopener noreferrer"
+                    target="_blank">
+                    <i class="fa fa-linkedin"></i>
+                </a>
             </div>
             <div class="card-body">
-                <div class="card-body-name">
-                    John Doe
-                </div>
+                <div class="card-body-name">Abhijeet Mathur</div>
                 <div class="card-body-position">
-                    Software Engineer at Google
+                    Batch of 2016-2020
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="card-img">
+                <img src="img/alumni_4.jfif" alt="" />
+            </div>
+            <div class="alumni-contact">
+                <a href="https://www.linkedin.com/in/littlestar642/" rel="noopener noreferrer" target="_blank">
+                    <i class="fa fa-linkedin"></i>
+                </a>
+            </div>
+            <div class="card-body">
+                <div class="card-body-name">Avinash Jaiswal</div>
+                <div class="card-body-position">
+                    Batch of 2016-2020
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="card-img">
+                <img src="img/alumni_5.jfif" alt="" />
+            </div>
+            <div class="alumni-contact">
+                <a href="https://www.linkedin.com/in/akshay-busa-79608514b/" rel="noopener noreferrer" target="_blank">
+                    <i class="fa fa-linkedin"></i>
+                </a>
+            </div>
+            <div class="card-body">
+                <div class="card-body-name">Akshay Busa</div>
+                <div class="card-body-position">
+                    Batch of 2016-2020
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="card-img">
+                <img src="img/alumni_6.jfif" alt="" />
+            </div>
+            <div class="alumni-contact">
+                <a href="https://www.linkedin.com/in/swapnil-patel-b7a841129/" rel="noopener noreferrer"
+                    target="_blank">
+                    <i class="fa fa-linkedin"></i>
+                </a>
+            </div>
+            <div class="card-body">
+                <div class="card-body-name">Swapnil Patel</div>
+                <div class="card-body-position">
+                    Batch of 2015-2019
                 </div>
             </div>
         </div>
     </div>
+    <!-- Footer -->
+    <footer id="footer">
+        <!-- container -->
+        <div class="wave_box container">
+            <!-- row -->
+            <div class="row">
+                <!-- footer logo -->
+                <div class="col-md-4">
+                    <div class="footer-brand">
+                        <a class="logo" href="/">
+                            <img class="logo-img" src="./img/logo_only1.png" alt="logo" />
+                        </a>
+                        <span>Dot</span><span>Slash</span><span> 4.0</span>
+                    </div>
+                </div>
+                <!-- /footer logo -->
+
+                <!-- contact social -->
+                <div class="col-md-8">
+                    <div class="contact-social">
+                        <a href="https://www.facebook.com/hackatdotslash/" rel="noopener noreferrer" target="_blank"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://twitter.com/hackatdotslash" rel="noopener noreferrer" target="_blank"><i
+                                class="fa fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/hackatdotslash/" target="_blank"><i
+                                class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/hackatdotslash/" rel="noopener noreferrer"
+                            target="_blank">
+                            <i class="fa fa-linkedin"></i>
+                        </a>
+                        <a href="mailto:darshil@hackdotslash.co.in" target="_blank"><i class="fa fa-envelope"></i></a>
+                    </div>
+                </div>
+                <!-- /contact social -->
+                <div class="coc">
+                    <a href="/coc">Code of Conduct</a>
+                </div>
+                <div class="copyright">
+                    ©2021 DOTSLASH
+                </div>
+            </div>
+            <!-- /row -->
+        </div>
+        <!-- /container -->
+    </footer>
     <script src="js/bootstrap.js"></script>
 </body>
 
