--- a/views/alumni.hbs
+++ b/views/alumni.hbs
@@ -141,9 +141,7 @@
             </div>
             <div class="card-body">
                 <div class="card-body-name">Swapnil Patel</div>
-                <div class="card-body-position">
-                    Batch of 2015-2019
-                </div>
+                <div class="card-body-position"> Batch of 2015-2019 </div>
             </div>
         </div>
     </div>
