--- a/views/home.hbs
+++ b/views/home.hbs
@@ -404,7 +404,7 @@
         <br>
       </div>
 
-      {{!-- <div id="schedule" class="section" style="background-color: whitesmoke;">
+      <div id="schedule" class="section" style="background-color: whitesmoke;">
         <!-- container -->
         <div class="container">
           <!-- row -->
@@ -422,15 +422,15 @@
                 <div class="event">
                   <div class="event-day">
                     <div>
-                      <span class="day">18</span>
-                      <span class="year">Jan, 2020</span>
+                      <span class="day">30</span>
+                      <span class="year">Jan, 2021</span>
                     </div>
                   </div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM</p>
-                    <h3 class="event-title">Check-in</h3>
-                    <p>Arrive at the location with your valid college ID Card and a printout of the acceptance form. All
-                      the participants need to arrive latest by 10 AM.</p>
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 12 : 00 AM</p>
+                    <h3 class="event-title">Problem Statements Released</h3>
+                    <p>Participating Teams will have to select any one of the problem statements released and build
+                      their hack around it during the hackathon. </p>
                   </div>
                 </div>
                 <!-- /event -->
@@ -439,11 +439,10 @@
                 <div class="event">
                   <div class="event-hour"></div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 10 : 00 AM</p>
-                    <h3 class="event-title">Opening Ceremony</h3>
-                    <p>The hackathon will begin with a small welcome ceremony and the participants will be addressed by
-                      the
-                      coordinators.
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 30 AM</p>
+                    <h3 class="event-title">Virtual Onboarding</h3>
+                    <p>The teams will be checked in before the main event commences. Participants are requested to make
+                      sure that their team members are present and all the prerequisites for the event are fulfilled.
                     </p>
                   </div>
                 </div>
@@ -453,9 +452,11 @@
                 <div class="event">
                   <div class="event-hour"></div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 11 : 00 AM</p>
-                    <h3 class="event-title">Hacking Starts!</h3>
-                    <p>Hacking Commences. Time to Unleash!!</p>
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 9 : 00 AM</p>
+                    <h3 class="event-title">Opening Ceremony</h3>
+                    <p>Inauguration ceremony of DOTSLASH 4.0 will start! Participants will be briefed on rules and
+                      regulations, schedule and other information regarding hackathon. Problem Statements willl be
+                      thoroughly explained. </p>
                   </div>
                 </div>
                 <!-- /event -->
@@ -464,9 +465,10 @@
                 <div class="event">
                   <div class="event-hour"></div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 PM</p>
-                    <h3 class="event-title">Lunch</h3>
-                    <p>The participants will be provided with scrumptious lunch to go about the day.</p>
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 10 : 00 AM</p>
+                    <h3 class="event-title">Hackathon Begins </h3>
+                    <p>Coding time starts! The participating teams can utilize their private team rooms on discord
+                      server to discuss and develop their hack based on their chosen problem statement</p>
                   </div>
                 </div>
                 <!-- /event -->
@@ -474,10 +476,10 @@
                 <div class="event">
                   <div class="event-hour"></div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 4 : 00 PM</p>
-                    <h3 class="event-title">Panel Discussion</h3>
-                    <p>A Discussion with the judges to get a better insight about the present industry culture and top
-                      trends.</p>
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 12 : 00 PM</p>
+                    <h3 class="event-title">Final Problem Statement Selection</h3>
+                    <p>Teams will have to finalise the problem statements they wish to work upon, after which any
+                      changes thus requested will stand inadmissible. </p>
                   </div>
                 </div>
 
@@ -485,20 +487,10 @@
                 <div class="event">
                   <div class="event-hour"></div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 5 : 00 PM</p>
-                    <h3 class="event-title">Tea Break</h3>
-                    <p>The participants will be provided with tea, coffee and some snacks.</p>
-                  </div>
-                </div>
-                <!-- /event -->
-
-                <!-- event -->
-                <div class="event">
-                  <div class="event-hour"></div>
-                  <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 PM</p>
-                    <h3 class="event-title">Dinner</h3>
-                    <p>First Day of hackathon will end with delicious dinner.</p>
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 3: 00 PM</p>
+                    <h3 class="event-title">Mentoring Session</h3>
+                    <p>Mentors will visit each of the participating teams present. They will provide guidance and
+                      counsel to the teams on how they can improvise their idea or hack they are working on. </p>
                   </div>
                 </div>
                 <!-- /event -->
@@ -507,14 +499,15 @@
                 <div class="event">
                   <div class="event-day">
                     <div>
-                      <span class="day">19</span>
-                      <span class="year">Jan, 2020</span>
+                      <span class="day">31</span>
+                      <span class="year">Jan, 2021</span>
                     </div>
                   </div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 AM</p>
-                    <h3 class="event-title">Midnight Snacks</h3>
-                    <p>Midnight snacks will be provided to diffuse the late night tension.</p>
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 9 : 00 AM</p>
+                    <h3 class="event-title">Mentoring Session</h3>
+                    <p>Mentors will visit the teams again. They will help them come down to the best suited solution for
+                      their problem statements and refine their projects before the final submissions. </p>
                   </div>
                 </div>
                 <!-- /event -->
@@ -523,8 +516,8 @@
                 <div class="event">
                   <div class="event-hour"></div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM</p>
-                    <h3 class="event-title">Breakfast</h3>
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 2 : 00 PM</p>
+                    <h3 class="event-title">Judging Round </h3>
                     <p>Breakfast will be provided to the participants along with tea coffee and snacks.</p>
                   </div>
                 </div>
@@ -534,9 +527,10 @@
                 <div class="event">
                   <div class="event-hour"></div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 11 : 00 AM</p>
-                    <h3 class="event-title">Primary Evaluation</h3>
-                    <p>The primary evaluation for the hackathon will be conducted by the judges.</p>
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 4 : 00 PM</p>
+                    <h3 class="event-title">Final Submission - Coding Time Ends</h3>
+                    <p>The participants will have to submit their final work. After this point, No addition to the
+                      project will be allowed. </p>
                   </div>
                 </div>
                 <!-- /event -->
@@ -545,9 +539,10 @@
                 <div class="event">
                   <div class="event-hour"></div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 1 : 00 PM</p>
-                    <h3 class="event-title">Lunch</h3>
-                    <p>Lunch for day 2.</p>
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 4 : 30 PM</p>
+                    <h3 class="event-title">Presentation Round</h3>
+                    <p>Top 8 teams will have to present their ideas and projects in front of everyone. The Showdown
+                      Begins!</p>
                   </div>
                 </div>
                 <!-- /event -->
@@ -555,51 +550,19 @@
                 <div class="event">
                   <div class="event-hour"></div>
                   <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 3 : 00 PM</p>
-                    <h3 class="event-title">Final Evaluation Begins!</h3>
-                    <p>The judges analyze the teams and their hacks. Top ideas are selected for the Presentation
-                      session.</p>
+                    <p class="event-time"><i class="fa fa-clock-o"></i> 7 : 30 PM</p>
+                    <h3 class="event-title">Result Declaration</h3>
+                    <p>The judges will declare the winners of DotSlash 4.0. Prizes for the winners will be revealed
+                      followed by the Closing Ceremony.</p>
                   </div>
                 </div>
-
-                <!-- event -->
-                <div class="event">
-                  <div class="event-hour"></div>
-                  <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 5 : 00 PM</p>
-                    <h3 class="event-title">Presentation Session</h3>
-                    <p>The selected participants will have to present their ideas and projects in front of everyone. The
-                      Showdown Begins!</p>
-                  </div>
-                </div>
-                <!-- /event -->
-
-                <!-- event -->
-                <div class="event">
-                  <div class="event-day">
-                    <div>
-                      <span class="day">19</span>
-                      <span class="year">Jan, 2020</span>
-                    </div>
-                  </div>
-                  <div class="event-content">
-                    <p class="event-time"><i class="fa fa-clock-o"></i> 7 : 00 PM</p>
-                    <h3 class="event-title">Results Declaration</h3>
-                    <p>The judges will declare the winners of Dotslash Hackathon!</p>
-                  </div>
-                </div>
-                <!-- /event -->
               </div>
-              <div class="download-btn">
-                <a href="./assets/Brochure.pdf" download="Brochure" class="main-btn">Download Brochure</a>
-              </div>
-
             </div>
           </div>
           <!-- /row -->
         </div>
         <!-- /container -->
-      </div> --}}
+      </div>
       <!-- PRIZES -->
       <div id="prizes" class="section">
         <div class="container">
