micro: schedule updated

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -518,7 +518,9 @@
                   <div class="event-content">
                     <p class="event-time"><i class="fa fa-clock-o"></i> 2 : 00 PM</p>
                     <h3 class="event-title">Judging Round </h3>
-                    <p>Breakfast will be provided to the participants along with tea coffee and snacks.</p>
+                    <p>The judging panel will visit each team to evaluate their work. The participants will be expected
+                      to pitch their ideas as well as show a demo of their hack within a stipulated amount of time.
+                    </p>
                   </div>
                 </div>
                 <!-- /event -->
