--- a/views/home.hbs
+++ b/views/home.hbs
@@ -186,7 +186,7 @@
                 </span>
               </div>
               <div class="save_the_date zoomIn animated delay-5s">
-                Save the Date
+                Time to unleash!!
               </div>
               {{!-- <div class="last-date-info animated bounceInUp delay-5s">
                 Last date of registration is 9th Jan
