chore: sponsor added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -824,6 +824,9 @@
               <a href="https://www.axure.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/axure.png" alt="">
               </a>
+              <a href="https://jovian.ai/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/jovian.svg" alt="">
+              </a>
               <a href="https://interwebs.host/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/interwebshost.png" alt="">
               </a>
