--- a/public/sass/background.scss
+++ b/public/sass/background.scss
@@ -1,4 +1,3 @@
-
 // n is number of stars required
 @function multiple-box-shadow($n) {
   $value: "#{random(2000)}px #{random(2000)}px #FFF";
@@ -17,7 +16,7 @@ $shadows-big: multiple-box-shadow(100);
   // background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
   // background: radial-gradient(ellipse at bottom, #ee0303 0%, #0e0d0d 100%);
   // background: radial-gradient(ellipse at bottom, #ee0303 0%, #00172c 100%);
-  background: radial-gradient(ellipse at bottom, #940202 0%, #00172c 100%);
+  background: radial-gradient(ellipse at bottom, #000 0%, #00172c 100%);
   overflow: hidden;
 }
 #stars {
@@ -86,4 +85,4 @@ $shadows-big: multiple-box-shadow(100);
   }
 }
 
-@import 'mobile';
+@import "mobile";
