--- a/views/home_5.hbs
+++ b/views/home_5.hbs
@@ -79,7 +79,7 @@
                 <a class="logo" href="/">
                   <img
                     class="logo-alt-img"
-                    src="./img/2022/navbar_logo.jpg"
+                    src="./img/2022/navbar_logo.png"
                     alt="logo"
                   />
                   <img class="logo-img" src="./img/logo_only1.png" alt="logo" />
@@ -137,36 +137,7 @@
               </div>
             </div>
             <div class="hero__content__banner">
-              <img
-                class="banner_img animated rotateIn delay-1s"
-                src="./img/main_banner.png"
-                alt="banner"
-              />
-              <div class="hero__content__banner_slogan">
-                <div class="animated delay-5s fadeOut">
-                  <span class="fadeIn animated delay-1s">
-                    Register
-                  </span>
-                  <span class="fadeIn animated delay-2s">
-                    Compete
-                  </span>
-                  <span class="fadeIn animated delay-3s">
-                    Win
-                  </span>
-                  <span class="fadeIn animated delay-4s">
-                    Brag
-                  </span>
-                </div>
-                <div class="save_the_date zoomIn animated delay-5s">
-                  Time to unleash!!
-                </div>
-                {{! <div class="last-date-info animated bounceInUp delay-5s">
-                Last date of registration is 9th Jan
-                <div>
-                  hurry up folks!
-                </div>
-              </div> }}
-              </div>
+
             </div>
 
           </div>
