--- a/views/home_2022.hbs
+++ b/views/home_2022.hbs
@@ -52,6 +52,7 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="css/fire.css" />
     <link rel="stylesheet" href="css/meteor.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="./css/herostyles.css" />
@@ -132,9 +133,27 @@
           <div class="row">
             <div class="hero__content__details">
               <div class="hackathon__details">
-
-                <h1 class="hackathon__details__title"><span>Dot</span><span
-                  >Slash</span><span> 5.0</span></h1>
+                <video
+                  id="fire"
+                  src="video/fire.mp4"
+                  autoplay
+                  muted=""
+                  width="500px"
+                  height="200px"
+                ></video>
+                <h1 class="hackathon__details__title">
+                  <span>D</span>
+                  <span>O</span>
+                  <span>T</span>
+                  <span>S</span>
+                  <span>L</span>
+                  <span>A</span>
+                  <span>S</span>
+                  <span>H</span>
+                  <span>5</span>
+                  <span>.</span>
+                  <span>0</span>
+                </h1>
                 <div class="hackathon__details__discription">
                   <div>Root to ideas</div>
                 </div>
