--- a/views/home_2022.hbs
+++ b/views/home_2022.hbs
@@ -171,7 +171,7 @@
           <div class="row">
             <!-- section title -->
             <div class="section-title">
-              <h3 class="title"><span>About</span>
+              <h3 class="title" style="color: white;"><span>About</span>
                 <span style="color: #bd0c0e;">DotSlash</span></h3>
             </div>
             <!-- /section title -->
@@ -198,9 +198,8 @@
                   Surat (NIT Surat), perceives to be a globally accepted centre
                   of excellence in technical education catalysing the transfer
                   of high technologies resulting in enhanced quality. Ashine
-                  research park, SVNIT brings to you
-                  <b>DotSlash-an inception towards letting our innovations
-                    begin.</b>
+                  research park, SVNIT brings to you DotSlash-an inception
+                  towards letting our innovations begin.
                 </p>
                 <br />
                 <p>DotSlash​ is a 30 hours long hackathon which is completely
@@ -335,7 +334,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="section-title">
-              <h3 class="title"><span style="color: #0b0f28">The &nbsp;</span><span
+              <h3 class="title"><span style="color:white">The &nbsp;</span><span
                 > Hackathon</span>
               </h3>
             </div>
@@ -403,7 +402,7 @@
             <div class="container">
               <div class="row">
                 <div class="section-title">
-                  <h3 class="title"><span style="color: #0b0f28">Sponsors &nbsp;</span><span
+                  <h3 class="title"><span style="color: white">Sponsors &nbsp;</span><span
                       style="color: #bd0c0e;"
                     >/ Partners</span>
                   </h3>
@@ -464,7 +463,7 @@
                   style="display: flex; flex-wrap: wrap-reverse; flex-flow: column-reverse; align-items: center; justify-content: center;"
                 >
                   <div style="display: flex;">
-                    <h3 class="title"><span style="color: #0b0f28">Frequently
+                    <h3 class="title"><span style="color: white">Frequently
                         Asked &nbsp;</span><span
                         style="color: #bd0c0e;"
                       >Questions</span></h3>
@@ -485,7 +484,7 @@
                         data-toggle="collapse"
                         class="box arrow0"
                         href="#num1"
-                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000"
+                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                       >
                         <span style="vertical-align: sub"><i
                             class="material-icons prefix arrow-img0"
@@ -503,7 +502,7 @@
                         data-toggle="collapse"
                         class="box arrow1"
                         href="#num2"
-                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000"
+                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                       >
                         <span style="vertical-align: sub"><i
                             class="material-icons prefix arrow-img1"
@@ -518,7 +517,7 @@
                         data-toggle="collapse"
                         class="box arrow2"
                         href="#num3"
-                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000"
+                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                       >
                         <span style="vertical-align: sub"><i
                             class="material-icons prefix arrow-img2"
@@ -537,7 +536,7 @@
                         data-toggle="collapse"
                         class="box arrow3"
                         href="#num4"
-                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000"
+                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                       >
                         <span style="vertical-align: sub"><i
                             class="material-icons prefix arrow-img3"
@@ -556,7 +555,7 @@
                         data-toggle="collapse"
                         class="box arrow4"
                         href="#num5"
-                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000"
+                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                       >
                         <span style="vertical-align: sub"><i
                             class="material-icons prefix arrow-img4"
@@ -580,7 +579,7 @@
                         data-toggle="collapse"
                         class="box arrow8"
                         href="#num9"
-                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000 text-decoration: none; color:#000"
+                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:white text-decoration: none; color:white"
                       >
                         <span style="vertical-align: sub"><i
                             class="material-icons prefix arrow-img8"
@@ -596,7 +595,7 @@
                         data-toggle="collapse"
                         class="box arrow9"
                         href="#num10"
-                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000"
+                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                       >
                         <span style="vertical-align: sub"><i
                             class="material-icons prefix arrow-img9"
@@ -613,7 +612,7 @@
                         data-toggle="collapse"
                         class="box arrow10"
                         href="#num11"
-                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000"
+                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                       >
                         <span style="vertical-align: sub"><i
                             class="material-icons prefix arrow-img10"
@@ -632,7 +631,7 @@
                         data-toggle="collapse"
                         class="box arrow12"
                         href="#num13"
-                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:#000"
+                        style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                       >
                         <span style="vertical-align: sub"><i
                             class="material-icons prefix arrow-img12"
@@ -659,7 +658,7 @@
               <div class="row">
                 <!-- section title -->
                 <div class="section-title">
-                  <h3 class="title"><span style="color: #0b0f28">Contact &nbsp;</span><span
+                  <h3 class="title"><span style="color: white">Contact &nbsp;</span><span
                       style="color: #bd0c0e;"
                     >Info</span>
                   </h3>
@@ -716,7 +715,11 @@
             <div class="col-md-4">
               <div class="footer-brand">
                 <a class="logo" href="/">
-                  <img class="logo-img" src="./img/logo_only1.png" alt="logo" />
+                  <img
+                    class="logo-img"
+                    src="./img/2022/navbar_logo.png"
+                    alt="logo"
+                  />
                 </a>
                 <span>Dot</span><span>Slash</span><span> 4.0</span>
               </div>
@@ -730,25 +733,26 @@
                   href="https://www.facebook.com/hackatdotslash/"
                   rel="noopener noreferrer"
                   target="_blank"
-                ><i class="fa fa-facebook"></i></a>
+                ><i class="fa fa-facebook" style="padding-top: 10px;"></i></a>
                 <a
                   href="https://twitter.com/hackatdotslash"
                   rel="noopener noreferrer"
                   target="_blank"
-                ><i class="fa fa-twitter"></i></a>
+                ><i class="fa fa-twitter" style="padding-top: 10px;"></i></a>
                 <a
                   href="https://www.instagram.com/hackatdotslash/"
                   target="_blank"
-                ><i class="fa fa-instagram"></i></a>
+                ><i class="fa fa-instagram" style="padding-top: 10px;"></i></a>
                 <a
                   href="https://www.linkedin.com/company/hackatdotslash/"
                   rel="noopener noreferrer"
                   target="_blank"
                 >
-                  <i class="fa fa-linkedin"></i>
+                  <i class="fa fa-linkedin" style="padding-top: 10px;"></i>
                 </a>
                 <a href="mailto:darshil@hackdotslash.co.in" target="_blank"><i
                     class="fa fa-envelope"
+                    style="padding-top: 10px;"
                   ></i></a>
               </div>
             </div>
@@ -757,7 +761,7 @@
               <a href="/coc">Code of Conduct</a>
             </div>
             <div class="copyright">
-              ©2021 DOTSLASH
+              ©2022 DOTSLASH
             </div>
           </div>
           <!-- /row -->
