--- a/public/css/herostyles.css
+++ b/public/css/herostyles.css
@@ -268,7 +268,7 @@
 #footer .coc a {
   font-weight: 700;
   text-decoration: underline;
-  color: black;
+  color: white;
 }
 #footer .coc a:hover {
   color: #820507;
