--- a/views/home_2022.hbs
+++ b/views/home_2022.hbs
@@ -105,7 +105,7 @@
 
               <!-- Mobile toggle -->
               <button class="navbar-toggle">
-                <i class="fa fa-bars"></i>
+                <i class="fa fa-bars" style="background-color: white;"></i>
               </button>
               <!-- /Mobile toggle -->
             </div>
