--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta property="og:type" content="article" />
-    <meta property="og:site_name" content="HackDotslash4.0" />
+    <meta property="og:site_name" content="HackDotslash5.0" />
     <meta property="og:title" content="Dotslash Hackathon: Root To Ideas" />
     <meta
       property="og:description"
@@ -161,6 +161,7 @@
           </div>
         </div>
       </div>
+
       <!-- /Hero -->
 
       <!-- About -->
@@ -715,6 +716,11 @@
             <div class="col-md-4">
               <div class="footer-brand">
                 <a class="logo" href="/">
+                  <img
+                    class="logo-alt-img"
+                    src="./img/2022/navbar_logo.png"
+                    alt="logo"
+                  />
                   <img
                     class="logo-img"
                     src="./img/2022/navbar_logo.png"
