--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,7 +192,7 @@ div#swal2-content ol li {
   display: none;
 }
 #header.fixed-navbar .navbar-brand .logo .logo-alt-img {
-  display: none;
+  display: block;
 }
 #header:not(.transparent-navbar) .navbar-brand .logo .logo-alt-img {
   display: none;
@@ -218,7 +218,7 @@ div#swal2-content ol li {
   left: 0;
   right: 0;
   top: 0;
-  background: #fff;
+  background-color: black;
   box-shadow: 0px 0px 3px #0003;
   border-bottom: none;
   animation: slide-in 0.3s;
