--- a/views/home.hbs
+++ b/views/home.hbs
@@ -109,7 +109,7 @@
 
               <!-- Mobile toggle -->
               <button class="navbar-toggle">
-                <i class="fa fa-bars"></i>
+                <i class="fa fa-bars" style="background: white;"></i>
               </button>
               <!-- /Mobile toggle -->
             </div>
