--- a/views/home.hbs
+++ b/views/home.hbs
@@ -156,7 +156,9 @@
               </div>
             </div>
             <div class="hero__content__banner">
-
+              <h1><span>BIGGER</span></h1>
+              <h1><span>BETTER</span></h1>
+              <h1><span>BOLDER</span></h1>
             </div>
 
           </div>
