--- a/views/home.hbs
+++ b/views/home.hbs
@@ -155,7 +155,7 @@
                   >Join us on Discord</a></button>
               </div>
             </div>
-            <div class="hero__content__banner">
+            <div class="hero__content__banner" style="color: red;">
 
             </div>
 
