Contact details update

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -419,7 +419,8 @@
                 </h3>
               </div>
               <div class="row text-center">
-                <p><a href="/2021">Check out our last year sponsor's here!</a></p>
+                <p><a href="https://acm-svnit.github.io/DotSlash4.0/">Check out
+                    our last year sponsor's here!</a></p>
               </div>
               <!-- /row -->
             </div>
@@ -446,8 +447,8 @@
                 <h4>
                   Contact us at
                   <a
-                    href="mailto:darshil@hackdotslash.co.in"
-                  >darshil@hackdotslash.co.in</a>
+                    href="mailto:keshav@hackdotslash.co.in"
+                  >keshav@hackdotslash.co.in</a>
                 </h4>
                 <a
                   href="./assets/Brochure.pdf"
@@ -717,8 +718,8 @@
                 <div class="contact">
                   <h3>Email</h3>
                   <a
-                    href="mailto:darshil@hackdotslash.co.in"
-                  >darshil@hackdotslash.co.in</a>
+                    href="mailto:keshav@hackdotslash.co.in"
+                  >keshav@hackdotslash.co.in</a>
                 </div>
               </div>
               <!-- /contact -->
@@ -727,10 +728,10 @@
               <div class="col-sm-4">
                 <div class="contact">
                   <h3>Mobile</h3>
-                  <a href="tel:+91 97129 89101">&nbsp;&nbsp;<b>+91 97129 89101</b>
-                    - Darshil Savaliya</a><br />
-                  <a href="tel:+91 70166 05695"><b>+91 70166 05695</b>
-                    - Yamini Kabra</a>
+                  <a href="tel:+91 97129 89101">&nbsp;&nbsp;<b>+91 89508 20378</b>
+                    - Keshav Gautam</a><br />
+                  <a href="tel:+91 70166 05695"><b>+91 79906 30623</b>
+                    - Gaurav Kumar</a>
                 </div>
               </div>
               <!-- /contact -->
@@ -787,7 +788,7 @@
                 >
                   <i class="fa fa-linkedin" style="padding-top: 10px;"></i>
                 </a>
-                <a href="mailto:darshil@hackdotslash.co.in" target="_blank"><i
+                <a href="mailto:keshav@hackdotslash.co.in" target="_blank"><i
                     class="fa fa-envelope"
                     style="padding-top: 10px;"
                   ></i></a>
