--- a/views/home.hbs
+++ b/views/home.hbs
@@ -156,6 +156,281 @@
               </div>
             </div>
             <div class="hero__content__banner">
+              <svg
+                class="bottom-center"
+                width="983"
+                height="473"
+                viewBox="0 0 983 473"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M953.5 30.5V7.5L928.5 0.5L254 411.5H322L953.5 30.5Z"
+                  fill="url(#paint0_linear)"
+                ></path>
+                <path
+                  d="M701.5 93L703.5 68.5L678.5 62L4 473H72L701.5 93Z"
+                  stroke="url(#paint1_linear)"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M958 268L716 416H792L983 300V276.5L958 268Z"
+                  fill="url(#paint2_linear)"
+                ></path>
+                <path
+                  d="M929 416L687 564H763L954 448V424.5L929 416Z"
+                  fill="url(#paint3_linear)"
+                ></path>
+                <path
+                  d="M760.5 203L337 472.5H410L785.5 235V211.5L760.5 203Z"
+                  stroke="url(#paint4_linear)"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M799 300.5L611 413.5H677.5L821 331.5V309L799 300.5Z"
+                  fill="url(#paint5_linear)"
+                ></path>
+                <path
+                  d="M889.5 152L746 239.5L768.5 275L911 186.5V159.5L889.5 152Z"
+                  fill="url(#paint6_linear)"
+                ></path>
+                <path
+                  d="M715.5 320L572 407.5L594.5 443L737 354.5V327.5L715.5 320Z"
+                  stroke="url(#paint7_linear)"
+                  stroke-width="2"
+                ></path>
+                <path
+                  d="M764.5 29L621 116.5L643.5 152L786 63.5V36.5L764.5 29Z"
+                  fill="url(#paint8_linear)"
+                ></path>
+                <defs>
+                  <linearGradient
+                    id="paint0_linear"
+                    x1="611.75"
+                    y1="0.5"
+                    x2="611.75"
+                    y2="411.5"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#69C2BA"></stop>
+                    <stop
+                      offset="1"
+                      stop-color="#30BEB0"
+                      stop-opacity="0"
+                    ></stop>
+                  </linearGradient>
+                  <linearGradient
+                    id="paint1_linear"
+                    x1="353.75"
+                    y1="62"
+                    x2="353.75"
+                    y2="473"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#4D9A93"></stop>
+                    <stop
+                      offset="0.46875"
+                      stop-color="#69C2BA"
+                      stop-opacity="0"
+                    ></stop>
+                  </linearGradient>
+                  <linearGradient
+                    id="paint2_linear"
+                    x1="849.5"
+                    y1="268"
+                    x2="849.5"
+                    y2="416"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#69C2BA"></stop>
+                    <stop
+                      offset="1"
+                      stop-color="#3F9A92"
+                      stop-opacity="0"
+                    ></stop>
+                  </linearGradient>
+                  <linearGradient
+                    id="paint3_linear"
+                    x1="820.5"
+                    y1="416"
+                    x2="820.5"
+                    y2="564"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#3F9A92"></stop>
+                    <stop
+                      offset="1"
+                      stop-color="#3F9A92"
+                      stop-opacity="0"
+                    ></stop>
+                  </linearGradient>
+                  <linearGradient
+                    id="paint4_linear"
+                    x1="561.25"
+                    y1="203"
+                    x2="561.25"
+                    y2="472.5"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#4D9A93"></stop>
+                    <stop
+                      offset="1"
+                      stop-color="#69C2BA"
+                      stop-opacity="0"
+                    ></stop>
+                  </linearGradient>
+                  <linearGradient
+                    id="paint5_linear"
+                    x1="736.5"
+                    y1="300.5"
+                    x2="736.5"
+                    y2="413.5"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#69C2BA"></stop>
+                    <stop
+                      offset="1"
+                      stop-color="#3F9A92"
+                      stop-opacity="0"
+                    ></stop>
+                  </linearGradient>
+                  <linearGradient
+                    id="paint6_linear"
+                    x1="828.5"
+                    y1="152"
+                    x2="828.5"
+                    y2="275"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#236361"></stop>
+                    <stop
+                      offset="0.807292"
+                      stop-color="#236361"
+                      stop-opacity="0"
+                    ></stop>
+                  </linearGradient>
+                  <linearGradient
+                    id="paint7_linear"
+                    x1="654.5"
+                    y1="320"
+                    x2="654.5"
+                    y2="443"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#236361"></stop>
+                    <stop
+                      offset="1"
+                      stop-color="#69C2BA"
+                      stop-opacity="0"
+                    ></stop>
+                  </linearGradient>
+                  <linearGradient
+                    id="paint8_linear"
+                    x1="703.5"
+                    y1="29"
+                    x2="703.5"
+                    y2="152"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#236361"></stop>
+                    <stop
+                      offset="0.807292"
+                      stop-color="#236361"
+                      stop-opacity="0"
+                    ></stop>
+                  </linearGradient>
+                </defs>
+              </svg>
+
+              <svg class="bottom-right"width="866" height="507" viewBox="0 0 866 507" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M865.5 51V28L840.5 21L166 432H234L865.5 51Z" fill="url(#paint0_linear)"/>
+<path d="M701.5 64.5L703.5 40L678.5 33.5L4 444.5H72L701.5 64.5Z" stroke="url(#paint1_linear)" stroke-width="2"/>
+<path d="M750.5 145L327 414.5H400L775.5 177V153.5L750.5 145Z" stroke="url(#paint2_linear)" stroke-width="2"/>
+<path d="M515 332L327 445H393.5L537 363V340.5L515 332Z" fill="url(#paint3_linear)"/>
+<path d="M838.5 129L695 216.5L691 245L717.5 252L860 163.5V136.5L838.5 129Z" fill="url(#paint4_linear)"/>
+<path d="M695 259L551 348V372.5L574 382L716.5 293.5V266.5L695 259Z" stroke="url(#paint5_linear)" stroke-width="2"/>
+<path d="M540 382L396 471V495.5L419 505L561.5 416.5V389.5L540 382Z" stroke="url(#paint6_linear)" stroke-width="2"/>
+<path d="M764.5 0.5L621 88V113L643.5 123.5L786 35V8L764.5 0.5Z" fill="url(#paint7_linear)"/>
+<defs>
+<linearGradient id="paint0_linear" x1="523.75" y1="21" x2="523.75" y2="432" gradientUnits="userSpaceOnUse">
+<stop stop-color="#69C2BA"/>
+<stop offset="0.630208" stop-color="#30BEB0" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint1_linear" x1="353.75" y1="33.5" x2="353.75" y2="444.5" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4D9A93"/>
+<stop offset="0.46875" stop-color="#69C2BA" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint2_linear" x1="551.25" y1="145" x2="551.25" y2="414.5" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4D9A93"/>
+<stop offset="1" stop-color="#69C2BA" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint3_linear" x1="452.5" y1="332" x2="452.5" y2="445" gradientUnits="userSpaceOnUse">
+<stop stop-color="#69C2BA"/>
+<stop offset="1" stop-color="#3F9A92" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint4_linear" x1="777.5" y1="129" x2="777.5" y2="252" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="0.807292" stop-color="#236361" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint5_linear" x1="634" y1="259" x2="634" y2="382" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="1" stop-color="#236361"/>
+</linearGradient>
+<linearGradient id="paint6_linear" x1="479" y1="382" x2="479" y2="505" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="1" stop-color="#236361"/>
+</linearGradient>
+<linearGradient id="paint7_linear" x1="703.5" y1="0.5" x2="703.5" y2="123.5" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="0.807292" stop-color="#236361" stop-opacity="0"/>
+</linearGradient>
+</defs>
+</svg>
+
+              <svg class="top-right" width="866" height="507" viewBox="0 0 866 507" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M865.5 51V28L840.5 21L166 432H234L865.5 51Z" fill="url(#paint0_linear)"/>
+<path d="M701.5 64.5L703.5 40L678.5 33.5L4 444.5H72L701.5 64.5Z" stroke="url(#paint1_linear)" stroke-width="2"/>
+<path d="M750.5 145L327 414.5H400L775.5 177V153.5L750.5 145Z" stroke="url(#paint2_linear)" stroke-width="2"/>
+<path d="M515 332L383 416V441L403 449L537 363V340.5L515 332Z" fill="url(#paint3_linear)"/>
+<path d="M838.5 129L695 216.5L691 245L717.5 252L860 163.5V136.5L838.5 129Z" fill="url(#paint4_linear)"/>
+<path d="M695 259L551 348V372.5L574 382L716.5 293.5V266.5L695 259Z" stroke="url(#paint5_linear)" stroke-width="2"/>
+<path d="M540 382L396 471V495.5L419 505L561.5 416.5V389.5L540 382Z" stroke="url(#paint6_linear)" stroke-width="2"/>
+<path d="M764.5 0.5L621 88V113L643.5 123.5L786 35V8L764.5 0.5Z" fill="url(#paint7_linear)"/>
+<defs>
+<linearGradient id="paint0_linear" x1="523.75" y1="21" x2="523.75" y2="432" gradientUnits="userSpaceOnUse">
+<stop stop-color="#69C2BA"/>
+<stop offset="0.630208" stop-color="#30BEB0" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint1_linear" x1="353.75" y1="33.5" x2="353.75" y2="444.5" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4D9A93"/>
+<stop offset="0.46875" stop-color="#69C2BA" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint2_linear" x1="551.25" y1="145" x2="551.25" y2="414.5" gradientUnits="userSpaceOnUse">
+<stop stop-color="#4D9A93"/>
+<stop offset="1" stop-color="#69C2BA" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint3_linear" x1="452.5" y1="332" x2="452.5" y2="445" gradientUnits="userSpaceOnUse">
+<stop stop-color="#69C2BA"/>
+<stop offset="1" stop-color="#3F9A92" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint4_linear" x1="777.5" y1="129" x2="777.5" y2="252" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="0.807292" stop-color="#236361" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint5_linear" x1="634" y1="259" x2="634" y2="382" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="1" stop-color="#236361"/>
+</linearGradient>
+<linearGradient id="paint6_linear" x1="479" y1="382" x2="479" y2="505" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="1" stop-color="#236361"/>
+</linearGradient>
+<linearGradient id="paint7_linear" x1="703.5" y1="0.5" x2="703.5" y2="123.5" gradientUnits="userSpaceOnUse">
+<stop stop-color="#236361"/>
+<stop offset="0.807292" stop-color="#236361" stop-opacity="0"/>
+</linearGradient>
+</defs>
+</svg>
 
             </div>
 
