--- a/views/home.hbs
+++ b/views/home.hbs
@@ -156,6 +156,58 @@
               </div>
             </div>
             <div class="hero__content__banner">
+              <div class="chat">
+                <div class="header chat__header">
+                  <div class="header__title">Dotslash Server</div>
+                  <div class="header__members">
+                    <div class="header__member"></div>
+                    <div class="header_member header_member--server"></div>
+                  </div>
+                </div>
+                <div class="message message--browser">
+                  <div class="message__content">Hey Server</div>
+                </div>
+                <div class="message message--server">
+                  <div class="message__content">Hey Folk 👋</div>
+                </div>
+                <div class="message message--browser">
+                  <div class="message__content">What is the date of hackathon?</div>
+                </div>
+                <div class="message message--server">
+                  <div class="message__content">It's 30-31st Jan 2021</div>
+                </div>
+                <div class="message message--browser">
+                  <div class="message__content">OK</div>
+                </div>
+                <div class="message message--browser">
+                  <div class="message__content">What's the last date of registration?</div>
+                </div>
+                <div class="message message--server">
+                  <div class="message__content">9th Jan 2021</div>
+                </div>
+                <div class="message message--browser">
+                  <div class="message__content">What is the mode of conduct?</div>
+                </div>
+                <div class="message message--server">
+                  <div class="message__content">Online</div>
+                </div>
+                <div class="message message--server">
+                  <div class="message__content">Anything else??</div>
+                </div>
+                <div class="message message--server">
+                  <div class="message__content">You still there??</div>
+                </div>
+                <div class="message message--left">
+                  <div class="message__content">Server left the chat</div>
+                </div>
+                <div class="message message--typing message--browser">
+                  <div class="message__content">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                  </div>
+                </div>
+              </div>
               <svg
                 class="bottom-center"
                 width="983"
