--- a/public/css/herostyles.css
+++ b/public/css/herostyles.css
@@ -241,6 +241,7 @@
 #footer {
   position: relative;
   background-image: url("../img/wave.svg");
+  background-repeat: round;
   height: 350px;
 }
 #footer .wave_box {
