--- a/public/css/herostyles.css
+++ b/public/css/herostyles.css
@@ -38,9 +38,24 @@
   margin-left: 0;
 }
 .hero__content__details .registration__details {
-  margin-bottom: 30px;
   display: flex;
   align-items: center;
+}
+.registration__details>*{
+  outline: none;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+}
+.registration__details input[type="email"]{
+  color: rgb(31, 31, 31);
+  width: 250px;
+  margin-right: 10px;
+}
+.registration__details input[type="submit"]{
+  cursor: pointer !important;
+  width: 120px;
+  background: linear-gradient(to right, #ff416c, #ff4b2b);
 }
 .hero__content__details .hackathon__details {
   padding-top: 55px;
@@ -84,7 +99,8 @@
   opacity: 0.9;
 }
 .hero__content__banner_slogan {
-  margin-top: 40px;
+  margin-top: 50px;
+  margin-left: -35px;
   font-family: lato;
   color: #ddd;
   font-size: 18px;
@@ -98,8 +114,10 @@
   padding: 0 15px;
 }
 .hero__content__banner_slogan .save_the_date {
-  font-size: 28px;
-  letter-spacing: 16px;
+  margin-top: -22px;
+  margin-left: 20px;
+  font-size: 23px;
+  letter-spacing: 12px;
   margin-bottom: 15px;
   font-weight: bold;
   text-transform: uppercase;
@@ -390,7 +408,7 @@
 @media(max-width: 1440px) and (min-width: 1024px){
   .chat{
     position: relative;
-    top: 7vh !important;
+    top: 0vh !important;
     right: -5vw !important;
   }
 }
