--- a/views/home_copy.hbs
+++ b/views/home_copy.hbs
@@ -233,6 +233,7 @@
                 </div>
               </div>
               <svg
+              style="display: none;"
                 class="bottom-center"
                 width="983"
                 height="473"
@@ -418,7 +419,7 @@
                 </defs>
               </svg>
 
-              <svg class="bottom-right"width="900" height="595" viewBox="0 0 900 595" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg style="display: none;" class="bottom-right"width="900" height="595" viewBox="0 0 900 595" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M824.5 50.5V27.5L799.5 20.5L125 431.5H193L824.5 50.5Z" fill="url(#paint0_linear)"/>
 <path d="M660.5 64L662.5 39.5L637.5 33L-37 444H31L660.5 64Z" stroke="url(#paint1_linear)" stroke-width="2"/>
 <path d="M709.5 144.5L286 414H359L734.5 176.5V153L709.5 144.5Z" stroke="url(#paint2_linear)" stroke-width="2"/>
@@ -476,7 +477,7 @@
 </linearGradient>
 </defs>
 </svg>
-<svg class="top-right"width="900" height="595" viewBox="0 0 900 595" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg  style="display: none;" class="top-right"width="900" height="595" viewBox="0 0 900 595" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M824.5 50.5V27.5L799.5 20.5L125 431.5H193L824.5 50.5Z" fill="url(#paint0_linear)"/>
 <path d="M660.5 64L662.5 39.5L637.5 33L-37 444H31L660.5 64Z" stroke="url(#paint1_linear)" stroke-width="2"/>
 <path d="M709.5 144.5L286 414H359L734.5 176.5V153L709.5 144.5Z" stroke="url(#paint2_linear)" stroke-width="2"/>
