--- a/views/home.hbs
+++ b/views/home.hbs
@@ -568,7 +568,7 @@
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
-                      class="box arrow0"
+                      class="box arrow0 questions"
                       href="#num1"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
@@ -585,7 +585,7 @@
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
-                      class="box arrow1"
+                      class="box arrow1 questions"
                       href="#num2"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
@@ -600,7 +600,7 @@
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
-                      class="box arrow2"
+                      class="box arrow2 questions"
                       href="#num3"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
@@ -619,7 +619,7 @@
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
-                      class="box arrow3"
+                      class="box arrow3 questions"
                       href="#num4"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
@@ -638,7 +638,7 @@
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
-                      class="box arrow4"
+                      class="box arrow4 questions"
                       href="#num5"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
@@ -662,7 +662,7 @@
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
-                      class="box arrow8"
+                      class="box arrow8 questions"
                       href="#num9"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white text-decoration: none; color:white"
                     >
@@ -678,7 +678,7 @@
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
-                      class="box arrow9"
+                      class="box arrow9 questions"
                       href="#num10"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
@@ -695,7 +695,7 @@
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
-                      class="box arrow10"
+                      class="box arrow10 questions"
                       href="#num11"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
@@ -714,7 +714,7 @@
                     <h3
                       data-parent="#accordion"
                       data-toggle="collapse"
-                      class="box arrow12"
+                      class="box arrow12 questions"
                       href="#num13"
                       style="cursor: pointer; font-weight: 300; text-decoration: none; color:white"
                     >
