fixes: scroll-to-top

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -93,7 +93,7 @@
             <div class="navbar-header">
               <!-- Logo -->
               <div class="navbar-brand">
-                <a class="logo" href="/">
+                <a class="logo" href="#home">
                   <img
                     class="logo-alt-img"
                     src="./img/2022/navbar_logo.png"
