fixed notify alginment issue

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -168,7 +168,7 @@
                   Coming Soon!
                 </div>
               </div>
-            <form action="/api/email" method="POST">
+            <form class="notify-me" action="/api/email" method="POST">
               <div class="registration__details fadeIn animated delay-5s" style="margin-top: 30px;">
                 <input type="email" name="email" id="user-email" placeholder="Enter your email" >
                 <input type="submit" id="notify-btn" value="Notify Me">
