--- a/public/css/herostyles.css
+++ b/public/css/herostyles.css
@@ -432,12 +432,17 @@
   }
 }
 
-@media(max-width:1024px) and (min-width:849px) {
+@media(max-width:1023px) and (min-width:849px) {
   .hero{
     height: 900px !important;
   }
   .hero__content__details {
     transform: scale(1.3);
+  }
+  .notify-me{
+   display: flex;
+   align-items: center;
+   justify-content: center;
   }
   .hero__content__banner_slogan{
     margin-top: -5vh !important;
@@ -458,6 +463,11 @@
     margin-top: -5vh !important;
     margin-left: 0 !important;
   }
+  .notify-me{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   }
   .chat{
     margin-top: 25vh !important;
   }
