--- a/views/home.hbs
+++ b/views/home.hbs
@@ -250,26 +250,38 @@
             <!-- /section title -->
 
             <div class="college" style="text-align:center; margin-top:-20px;">
-              <img
+              <a href="https://www.svnit.ac.in/">
+                <img
                 src="./img/svnit.png"
                 alt="logo"
                 style="height:120px;width:120px;border-radius:50%;"
               />
-              <img
-                src="./img/ashine.png"
-                alt="logo"
-                style="height:120px;width:120px;border-radius:50%;"
-              />
-              <img
-                src="./img/ssip_logo.png"
-                alt="logo"
-                height="68px"
-              />
-              <img
-                src="./img/acm_logo.png"
-                alt="logo"
-                style="height:120px;width:120px;border-radius:50%;"
-              />   
+              </a>
+
+              <a href="http://ashine.in/">
+                <img
+                  src="./img/ashine.png"
+                  alt="logo"
+                  style="height:120px;width:120px;border-radius:50%;"
+                />
+              </a>
+
+              <a href="http://www.ssipgujarat.in/">
+                <img
+                  src="./img/ssip_logo.png"
+                  alt="logo"
+                  height="68px"
+                />
+              </a>
+
+              <a href="https://nitsurat.acm.org/">
+                <img
+                  src="./img/acm_logo.png"
+                  alt="logo"
+                  style="height:120px;width:120px;border-radius:50%;"
+                />   
+              </a>
+
             </div><br /><br />
 
             <div class="col-md-8 col-md-offset-2 text-center">
